tools/shook/src/snapshots/shook__config__tests__malformed_toml_returns_error.snap
---
source: src/config.rs
expression: result.unwrap_err().to_string()
---
x TOML parse error at line 1, column 6
│   |
│ 1 | this is not [ valid toml !!!
│   |      ^
│ key with no value, expected `=`
│
