tools/shook/src/snapshots/shook__config__tests__test_invalid_config-invalid_server_port.snap
---
source: src/config.rs
expression: "err.to_string().lines().map(|l| l.trim_end()).collect::<Vec<_>>().join(\"\\n\")"
---
x TOML parse error at line 2, column 8
│   |
│ 2 | port = 100000
│   |        ^^^^^^
│ invalid value: integer `100000`, expected u16
│
