tools/shook/src/snapshots/shook__config__tests__test_invalid_config-unknown_field.snap
---
source: src/config.rs
expression: err.description()
---
TOML parse error at line 8, column 2
  |
8 | [runner]
  |  ^^^^^^
unknown field `runner`, expected one of `server`, `devop`, `kioyu`, `runners`
