tools/shook/src/snapshots/shook__config__tests__unknown_vendor_returns_error.snap
---
source: src/config.rs
expression: result.unwrap_err().to_string()
---
x TOML parse error at line 3, column 22
│   |
│ 3 |             vendor = "perforce"
│   |                      ^^^^^^^^^^
│ unknown variant `perforce`, expected one of `atlassian`, `bitbucket`, `forgejo`, `gitea`, `github`, `gitlab`, `woodpecker`
│
